<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="60dp">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/config_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/startBtn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/start_hotspot"
                android:textStyle="bold"
                android:background="@drawable/bg1"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/stopBtn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/stop_hotspot"
                android:textStyle="bold"
                android:background="@drawable/bg2"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/deep_grey"
                android:textStyle="bold"
                android:text="@string/status"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:gravity="center"/>

            <TextView
                android:id="@+id/ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/deep_grey"
                android:textStyle="normal"
                android:text="SSID"
                android:layout_margin="5dp"
                android:gravity="left"/>
@dimen/activity_horizontal_margin
            <TextView
                android:id="@+id/gateway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/deep_grey"
                android:textStyle="normal"
                android:text="IP Address"
                android:layout_margin="5dp"
                android:gravity="left"/>

            <TextView
                android:id="@+id/mac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/deep_grey"
                android:textStyle="normal"
                android:text="MAC Address"
                android:layout_margin="5dp"
                android:gravity="left"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
